[package]
name = "colors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mouse-rs = { git = "https://github.com/AltF02/mouse-rs" }
# chrono = "0.4.19"
image = "0.23.14"
fltk = "1.2.22"
clipboard-ext = "0.2.0"
